Fix bug when face overlaps with body and face size does not render

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ h3 {
 .homer.head {
   background-color: #ffd521;
   /* background-image: url('/assets/homerHead.png'); */
-  background-size: 4vmin;
+  /* background-size: 4vmin; */
   border-radius: 0px 30px 30px 0px;
 }
 
